# reed-solomon_syndrome_gf256

./: 2.orig  CMakeLists.txt  README.md  gf.h  gf_op.cpp  gf_test.c  main.c  rs.h  rs_internal.h  rs_internal_test.c  rs_test.c  test.h  types.h  util.h  util_test.c
